--- a/src/Styles/AllStyles.css
+++ b/src/Styles/AllStyles.css
@@ -13,9 +13,9 @@
 }
 
 .sideContainers {
-  width: 35vh;
+  width: 30vh;
   height: 80vh;
-  margin: 1em;
+  /* margin: 1em; */
   margin-bottom: 0;
   margin-top: 2;
   margin-bottom: 10px;
@@ -35,28 +35,46 @@
   background-color: #ef8f68;
   margin: 1em;
   border-radius: 14px;
-  height: 3em;
+  height: 2.5em;
+  color: #ffffff;
+  font-size: 20px;
+  padding-left: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btnContainer {
+  font-size: 15px;
+
   width: 90%;
   transition: 0.2s ease-in;
   background-color: #fffffd;
-  margin: 1em;
+  margin: 0.5em;
+  /* margin-bottom: 2em; */
+  height: 3em;
   border-radius: 14px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .btnContainer:hover {
   transform: scale(1.1);
+  height: 3em;
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  border-radius: 26px;
+  border-radius: 10px;
   background: #ef8f68;
   box-shadow: 5px 5px 32px #ba7051, -5px -5px 32px #ffae7f;
 }
 
 .userCard {
-  transition: 0.2s ease-in;
-
+  transition: transform 1.5s ease-in-out;
   height: 7em;
   margin: 1em;
   margin-top: 2em;
@@ -67,7 +85,7 @@
 }
 
 .userCard :hover {
-  transform: scale(1.04);
+  transform: scale(1.5);
 }
 .userCard p,
 small {
@@ -104,7 +122,6 @@ small {
 
 .playbackButtons {
   display: flex;
-
   justify-content: flex-end;
   justify-items: flex-end;
   align-items: flex-end;
@@ -114,7 +131,6 @@ small {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  /* justify-items: flex-end; */
   align-items: center;
 }
 
@@ -125,35 +141,56 @@ small {
   /* overflow-x: scroll; */
   overflow-y: scroll;
   height: 80vh;
-  width: 95vh;
+  width: 110vh;
   margin-bottom: 1em;
 
-  border-radius: 42px;
+  border-radius: 25px;
   background: #fffffd;
   box-shadow: inset 41px 41px 82px #ebebe9, inset -41px -41px 82px #ffffff;
 }
 
 .albumCardContainer {
-  /* display: flex; */
-  height: 20em;
-  width: 20em;
+  height: 22em;
+  width: 19em;
+  font-size: 16px;
+  margin: 2em;
+
+  transition: 0.1s ease-in-out;
+}
+
+.albumCardContainer:hover {
+  transform: scale(1.1);
+  align-self: center;
+  justify-content: center;
+  align-content: center;
+  height: 22em;
+  width: 17em;
+  font-size: 16px;
+  border-radius: 2em;
+  background: #fffffd;
+  box-shadow: 5px 5px 10px #666665, -5px -5px 10px #ffffff;
+  font-weight: 800;
+  font-style: oblique;
 }
 
 .albumCardContainer img {
-  /* border-radius: 2em; */
-  margin-bottom: 2em;
-  margin-top: 2em;
+  margin-bottom: 1em;
+  margin-top: 0.5em;
   height: 15em;
   width: 15em;
-  transition: 0.2s ease-in;
 
-  border-radius: 42px;
+  border-radius: 22px;
   background: #fffffd;
   box-shadow: 5px 5px 10px #666665, -5px -5px 10px #ffffff;
 }
 
+.albumCardContainer:hover {
+  transform: scale(1.009);
+  transition: 0.2s ease-in-out;
+}
+
 .albumCardContainer img:hover {
-  transform: scale(1.04);
+  opacity: 90%;
 }
 
 .albumCardContainer h6 {
