--- a/src/Styles/AllStyles.css
+++ b/src/Styles/AllStyles.css
@@ -1,5 +1,5 @@
 .parentParentContainer {
-  align-content: space-between;
+  align-content: space-around;
 }
 
 .playBackContainer {
@@ -25,19 +25,18 @@
   width: 100%;
   height: 3em;
   color: #ef8f68;
-  /* text-decoration: #ef8f68; */
   border-radius: 25px;
   background: linear-gradient(145deg, #ffffff, #e6e6e6);
   box-shadow: 12px 12px 24px #8c8c8c, -12px -12px 24px #ffffff;
 }
 .btnContainerActive {
   width: 100%;
+  height: 3.5em;
   background-color: #ef8f68;
   margin: 1em;
+  font-size: 17px;
   border-radius: 14px;
-  height: 2.5em;
   color: #ffffff;
-  font-size: 20px;
   padding-left: 0.5em;
   display: flex;
   align-items: center;
@@ -62,11 +61,14 @@
 
 .btnContainer:hover {
   transform: scale(1.1);
-  height: 3em;
   font-size: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
+
+  width: 100%;
+  height: 3.5em;
+  /* height: max-content + 1em; */
 
   border-radius: 10px;
   background: #ef8f68;
@@ -97,15 +99,18 @@ small {
 }
 .nowplayindContainer {
   display: flex;
+  position: relative;
   height: 15.5vh;
+
   width: 100%;
   justify-content: center;
   align-items: center;
+  text-align: left;
 }
 
 .nowplayindContainer img {
-  margin-right: 5em;
-  height: 8em;
+  margin-right: 2em;
+  height: 9em;
   border-radius: 10em;
 
   animation: rotate 2.5s linear infinite;
@@ -116,45 +121,44 @@ small {
   }
 }
 
-.songTitleContainer h3 {
+.songTitleContainer  {
   color: #ffffff;
 }
 
 .playbackButtons {
   display: flex;
-  justify-content: flex-end;
-  justify-items: flex-end;
+  justify-content: center;
+  justify-items: center;
   align-items: flex-end;
 }
 
 .seekerContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
 .centerContainer {
   display: flex;
   flex-wrap: wrap;
-  margin: 1em;
+  margin: 0.5em;
+  padding: 0.2em;
   /* overflow-x: scroll; */
   overflow-y: scroll;
   height: 80vh;
   width: 110vh;
   margin-bottom: 1em;
-
   border-radius: 25px;
   background: #fffffd;
   box-shadow: inset 41px 41px 82px #ebebe9, inset -41px -41px 82px #ffffff;
 }
 
 .albumCardContainer {
-  height: 22em;
+  height: 20em;
   width: 19em;
   font-size: 16px;
-  margin: 2em;
-
+  margin: 1.3em;
   transition: 0.1s ease-in-out;
 }
 
@@ -163,10 +167,10 @@ small {
   align-self: center;
   justify-content: center;
   align-content: center;
-  height: 22em;
+  height: 20em;
   width: 17em;
   font-size: 16px;
-  border-radius: 2em;
+  border-radius: 1.5em;
   background: #fffffd;
   box-shadow: 5px 5px 10px #666665, -5px -5px 10px #ffffff;
   font-weight: 800;
@@ -178,7 +182,6 @@ small {
   margin-top: 0.5em;
   height: 15em;
   width: 15em;
-
   border-radius: 22px;
   background: #fffffd;
   box-shadow: 5px 5px 10px #666665, -5px -5px 10px #ffffff;
@@ -193,9 +196,10 @@ small {
   opacity: 90%;
 }
 
-.albumCardContainer h6 {
+.albumCardContainer h4 {
   color: #ef8f68;
-  text-align: start;
-  padding-left: 4em;
-  font-size: 1em;
+  text-align: left;
+  padding-left: 2em;
+
+  font-size: 1.2em;
 }
